# Infra-copilot

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  requirements.txt
backend/: LICENSE.txt  main.py  pyproject.toml
backend/api/v1/: router.py
backend/core/: context.py  doc_ingester.py  logger.py  qdrant_service.py
backend/docs_engine/: crawler.py  embedder.py  ingestion.py  retriver.py
backend/docs_engine/loaders/: aws_loaders.py  base_loader.py
backend/llms/: openai_provider.py
backend/schemas/: llm.py
backend/src/backend/: __about__.py
backend/src/backend/agents/: base.py
backend/src/backend/agents/infra_blueprint/: blueprint.py
backend/src/backend/agents/pre-processing/: local_context.py  pre-processing.py
backend/src/backend/agents/pre_processing/: pre_processing.py
backend/src/backend/api/v1/: agent.py  docs.py  orchestrator.py  router.py
backend/src/backend/core/: config.py  di.py
backend/src/backend/doc_engine/: base_loader.py  chunker.py  embedder.py  weaviate_client.py
backend/src/backend/docs_engine/: chunker.py  crawler.py  embedder.py  loader.py  retriver.py  weaviate_client.py
backend/src/backend/docs_engine/loaders/: aws_loaders.py
backend/src/backend/llms/: base.py
backend/src/backend/schemas/: agent.py  blueprint.py  context.py  llm.py  terraform.py
backend/src/backend/services/: docs_engine.py
backend/src/backend/services/test_agents/: agent_servce.py
backend/src/backend/utils/: llm_response.py
backend/tests/: __init__.py
doc_engine-sample/: cli.py  docker-compose.yml
doc_engine-sample/rag_agent/: crawler.py  doc_manager.py  embedder.py  ingest_aws_docs.py  logging_config.py  orchestrator.py  retriever.py  weaviate_client.py
